2015-08-17  Patrice Dumas  <pertusus@free.fr>

	* tp/Texinfo/Convert/XSParagraph/MANIFEST, 
	Texinfo/Convert/XSParagraph/Makefile.PL, 
	Texinfo/Convert/XSParagraph/XSParagraph.pm,
	Texinfo/Convert/XSParagraph/t/XSParagraph.t: update stand-alone
	perl module code.  Remove unneeded or generated files.
	* tp/Texinfo/Convert/XSParagraph/Makefile.am,
	tp/Texinfo/Convert/XSParagraph/prepare_standalone_perl_module.sh:
	script that can be used to build a stand-alone module.

2015-08-17  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\scanmacro): Strip a trailing active newline 
	from the macro body if newlines are active.
	* doc/texinfo-tex-test.texi: Add example.
	
2015-08-17  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\macrobodyctxt): Make catcode of space 
	\other, so they are preserved when expanded in a context like 
	@example.
	(\parsemacbody, \parsermacbody): Terminate macro body at line 
	with space with catcode \other.
	(\macroargctxt, \defmacro): Update comments.
	* doc/texinfo-tex-test.texi: Add example.

2015-08-17  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo-tex-test.texi: Add example with macro invocation 
	nested inside an argument.

2015-08-17  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo-tex-test.texi: Add test file.
	* README-hacking: Mention to check texinfo-tex-test.texi.

2015-08-17  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\passargtomacro): New macro, to convert 
	doubled backslashes into single backslashes in macro argument.
	(\braceorline) <braced argument>: Call \passargtomacro.
	(\macroargctxt): Make catcode of \ active (13) instead of escape (0).

2015-08-16  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/t/60macro.t: New test 'macro_expands_to_empty'.

2015-08-16  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/texi2any.pl (%formats_table): Use the right key name to 
	store module names for 'debugtree' and 'debugcount'.

2015-08-16  Gavin Smith  <gavinsmith0123@gmail.com>
