@@ -66,8 +66,20 @@ Texinfo/Convert/Text.pm
 Texinfo/Convert/TextContent.pm
 Texinfo/Convert/UnFilled.pm
 Texinfo/Convert/Unicode.pm
+Texinfo/Convert/XSParagraph/MANIFEST
+Texinfo/Convert/XSParagraph/Makefile.PL
+Texinfo/Convert/XSParagraph/README
+Texinfo/Convert/XSParagraph/XSParagraph.pm
+Texinfo/Convert/XSParagraph/XSParagraph.xs
+Texinfo/Convert/XSParagraph/ppport.h
+Texinfo/Convert/XSParagraph/t/XSParagraph.t
+Texinfo/Convert/XSParagraph/text.c
+Texinfo/Convert/XSParagraph/text.h
+Texinfo/Convert/XSParagraph/xspara.c
+Texinfo/Convert/XSParagraph/xspara.h
 Texinfo/Documentlanguages.pm
 Texinfo/Encoding.pm
+Texinfo/ModulePath.pm
 Texinfo/Parser.pm
 Texinfo/Report.pm
 Texinfo/Structuring.pm
@@ -896,6 +908,7 @@ t/results/macro/implicit_quoting_one_arg.pl
 t/results/macro/implicit_quoting_recursion.pl
 t/results/macro/leading_spaces_ignore.pl
 t/results/macro/leading_spaces_no_ignore.pl
+t/results/macro/macro_expands_to_empty.pl
 t/results/macro/macro_expansion.pl
 t/results/macro/macro_for_end.pl
 t/results/macro/macro_for_ignored_line_command.pl
